--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
         required: false
     jira_ticket_id_pattern:
         description: 'Regex used to match the issue ticket key'
-        default: /\[(.+\-[0-9]+)\]/i
+        default: /\[([a-z]+[0-9]?\-[0-9]+)\]/i
         required: false
     source_control_range_from:
         description: 'Starting branch to get range of commits'
@@ -32,6 +32,14 @@ inputs:
         description: 'Release version to generate in Jira'
         default: ''
         required: false
+    github_token:
+        description: 'Github Token for retrieving PRs from repository'
+        default: ''
+        required: true 
+    repo_name:
+        description: 'Full name of the github repository'
+        default: ''
+        required: true 
 outputs:
     changelog_message:
         description: 'Generated changelog entry'
