--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-entities": "^1.2.1",
     "jira-changelog": "^1.5.0",
     "lodash": "^4.17.15",
+    "octonode": "^0.10.2",
     "regexp-from-string": "^0.1.0"
   }
 }
